--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-body{
+
+.titulo-principal{
+    padding-left:30px;
+}
+
+#banner{
+    width:100%;
+
+}
+
+.principal{
     background:#CCCCCC;
+    padding:20px;
+}
+
+.inicio{
+    text-align:center;
+   
 }
 
 p{
@@ -7,6 +23,35 @@ p{
     background: #CCCCCC;
 }
 
+#mision{
+    font: size 20px;
+}
+
 em strong{
     color: red;
+}
+
+.diferenciales{
+    background: #FFFFFF;
+    padding: 30px;
+
+}
+
+.titulo-diferenciales{
+    text-align:center;
+}
+
+.items{
+   font-style: italic; 
+}
+
+.lista-ul{
+    display: inline-block;
+    vertical-align: top;
+    width:20%;
+    margin-right: 15%;
+}
+.imagen-diferenciales{
+    width:50%;
+
 }
